--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -3,9 +3,9 @@
     <h1>Wishlist</h1>
     <a asp-action="Create">Add item</a>
     <ul>
-        @foreach (WishList.Models.Item item in Model)
+        @foreach (var item in Model)
         {
-            <li>@item.Description <a asp-action="delete" asp-route-id="@item.Id">delete</a></li>
+            <li>@item.Description <a asp-action="Delete" asp-route-id="@item.Id">delete</a></li>
         }
 
     </ul>
