--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -1,11 +1,10 @@
 ﻿@model List<WishList.Models.Item>
 
-    <h1>Wishlist</h1>
-    <a asp-action="Create">Add item</a>
-    <ul>
-        @foreach (var item in Model)
-        {
-            <li>@item.Description <a asp-action="Delete" asp-route-id="@item.Id">delete</a></li>
-        }
+<h1>Wishlist</h1>
 
-    </ul>
+<ul>
+    @foreach (var item in Model)
+    {
+        <li>@item.Description <a asp-action="delete" asp-route-id="@item.Id">delete</a></li>
+    }
+</ul> 
